--- a/aula14ex/ex017/estilo.css
+++ b/aula14ex/ex017/estilo.css
@@ -14,7 +14,9 @@ section {
     background-color: white;
     border-radius: 10px;
     padding: 15px;
-    width: 500px;
+    min-width: 5em;
+    max-width: 25em;
+    min-height: 15em;
     margin: auto;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.363);
 }
