--- a/aula14ex/ex017/estilo.css
+++ b/aula14ex/ex017/estilo.css
@@ -21,6 +21,10 @@ section {
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.363);
 }
 
+#bot {
+    display: flex;
+}
+
 footer {
     color: white;
     text-align: center;
