--- a/aula12ex/ex14/estilo.css
+++ b/aula12ex/ex14/estilo.css
@@ -14,7 +14,9 @@ section {
     background-color: white;
     border-radius: 10px;
     padding: 15px;
-    width: 500px;
+    min-width: 15em;
+    max-width: 25em;
+    max-height: 15em;
     margin: auto;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.363);
 }
@@ -31,6 +33,6 @@ footer {
 }
 
 img {
-    width: 250px;
-    height: 250px;
+    width: 12em;
+    height: 12em;
 }
