--- a/aula12ex/ex015/estilo.css
+++ b/aula12ex/ex015/estilo.css
@@ -14,9 +14,15 @@ section {
     background-color: white;
     border-radius: 10px;
     padding: 15px;
-    width: 500px;
+    min-width: 15em;
+    max-width: 25em;
     margin: auto;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.363);
+}
+
+img {
+    width: 12em;
+    height: 12em;
 }
 
 footer {
