--- a/aula16ex/ex18/estilo.css
+++ b/aula16ex/ex18/estilo.css
@@ -14,13 +14,14 @@ section {
     background-color: white;
     border-radius: 10px;
     padding: 15px;
-    width: 500px;
+    min-width: 15em;
+    max-width: 25em;
     margin: auto;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.363);
 }
 
 select#lista {
-    width: 150px;
+    width: 11em;
 }
 
 footer {
